--- a/projektek/rocket_planner.html
+++ b/projektek/rocket_planner.html
@@ -283,7 +283,7 @@
 
     <!--==============  script   ==============-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../js/rocket_planner.js"></script>
+    <script src="../js/projektek/rocket_planner.js"></script>
 
 
 </body>
