--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <!--==============  oldal betöltés   ================-->
-    <div id="betoltes"><i class='bx bx-loader-alt bx-spin'></i></div>
+    <div id="betoltes"><div class="load"></div></div>
 
     <!--==============  kezdő oldal szekció   ==============-->
     <section class="kezdo_oldal" id="kezdo_oldal">
@@ -51,7 +51,7 @@
                     <a href="#harmadik_szekcio" class="nav_link">Projektek</a>
                 </li>
                 <li class="nav_elem">
-                    <a href="#kapcsolat_szekcio" class="nav_link">Kapcsolat</a>
+                    <a href="#negyedik_szekcio" class="nav_link">Kapcsolat</a>
                 </li>
             </ul>
 
@@ -86,7 +86,7 @@
 
                 <!--*==============  üdvözlés   ==============-->
                 <p class="kezdo_oldal_szoveg" id="udvozles">
-                    Üdvözlöm az oldalamon!
+                    Üdvözlöm a portfólió oldalamon!
                 </p>
 
                 <!--*==============  rövid bemutatkozó szöveg   ==============-->
@@ -117,9 +117,9 @@
 
             <div class="rolam_leiras rolam_szelessegek" id="rolam_leiras">
 
-                A nevem Kökény Barnabás. Szoftverfejlesztő és tesztelő végzetséggel rendelkezem.
-                Törekszem a weblapok igényes és a használatot megkönnyítő kialakítására és
-                a tiszta kód elveinek betartására.
+                A nevem Kökény Barnabás. Szoftverfejlesztő végzettséggel rendelkezem.
+                Elkötelezett vagyok az igényes és felhasználóbarát weboldalak tervezése és fejlesztése iránt, a legjobb
+                eredmények elérése érdekében tiszta kód elveit követem. Portfóliómon keresztül bemutatom készségeimet.
 
             </div>
 
@@ -222,7 +222,7 @@
     </section>
 
     <!--==============  negyedik szekció (kapcolat)  ==============-->
-    <section class="kapcsolat_szekcio" id="kapcsolat_szekcio">
+    <section class="negyedik_szekcio" id="negyedik_szekcio">
         <h1 class="jobbra_animacio" id="kapcsolat_cim">Kapcsolat</h1>
 
         <div id="kapcsolat_ikonok">
@@ -246,7 +246,7 @@
                     <input type="text" name="name" id="user_name" placeholder="Név">
                     <input type="email" name="email" id="email" placeholder="email">
                     <textarea name="message" id="message" placeholder="Üzenet" rows="5"></textarea>
-                    <button type="submit" id="bt_kuldes">Küldés</button>
+                    <button type="submit" id="btn_kuldes">Küldés</button>
                 </form>
             </div>
         </div>
