--- a/projektek/rocket_planner.html
+++ b/projektek/rocket_planner.html
@@ -20,7 +20,7 @@
 
 <body>
     <!--==============  oldal betöltés   ================-->
-    <div id="betoltes"><i class='bx bx-loader-alt bx-spin'></i></div>
+    <div id="betoltes"></div>
 
     <!--=============== Áttekintés szekció ================-->
     <section id="elso_szekcio">
