--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="rolam_leiras rolam_szelessegek" id="rolam_leiras">
 
                 A nevem Kökény Barnabás. Szoftverfejlesztő végzettséggel rendelkezem.
-                Elkötelezett vagyok az igényes és felhasználóbarát weboldalak tervezése és fejlesztése iránt, a legjobb
+                Elkötelezett vagyok az igényes és felhasználóbarát weboldalak tervezése és fejlesztése iránt. A legjobb
                 eredmények elérése érdekében tiszta kód elveit követem. Portfóliómon keresztül bemutatom készségeimet.
 
             </div>
