--- a/projektek/rocket_planner.html
+++ b/projektek/rocket_planner.html
@@ -20,7 +20,9 @@
 
 <body>
     <!--==============  oldal betöltés   ================-->
-    <div id="betoltes"></div>
+    <div id="betoltes">
+        <div class="load"></div>
+    </div>
 
     <!--=============== Áttekintés szekció ================-->
     <section id="elso_szekcio">
